--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -53,10 +53,10 @@
       ],
       "metadata": {
         "id": "6mGVa3SQYLkb",
-        "outputId": "b1005b1e-8145-4d02-c41c-7e70fae0cc5d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e4e2184e-1604-4484-cf37-8642e5e1b9b1"
       },
       "execution_count": 1,
       "outputs": [
@@ -95,18 +95,18 @@
     {
       "cell_type": "code",
       "source": [
-        "planet=\"Earth\"\n",
-        "diameter=\"12742\"\n",
-        "print('The diameter of{} is {} kilometers.'.format (planet,diameter));"
+        "planet = \"Earth\"\n",
+        "diameter = 12742\n",
+        "print( 'The diameter of{} is {} kilometers.'.format(planet,diameter) );"
       ],
       "metadata": {
         "id": "HyRyJv6CYPb4",
-        "outputId": "ea57cad6-a09c-4cbf-e8f7-7ab62412cbaa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d648705a-dab3-4cdf-b9de-e0e09ff33eb9"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,12 +134,12 @@
       ],
       "metadata": {
         "id": "fcVwbCc1QrQI",
-        "outputId": "635f7c12-c8b6-4886-95e1-083633c26d71",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "31edc0a3-0ac2-412b-efa6-2d124bdbdbaa"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,15 +149,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "MvbkMZpXYRaw"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -194,16 +185,16 @@
       "source": [
         "import numpy as np\n",
         "array=np.zeros(10)\n",
-        "print(array)\n"
+        "print(array)"
       ],
       "metadata": {
         "id": "NHrirmgCYXvU",
-        "outputId": "5537b000-c7f0-4e3a-b8e9-ed4e7e3f396a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c0eb52c1-0dea-4df0-8407-92ad4b0b5dc5"
       },
-      "execution_count": 15,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -219,16 +210,16 @@
       "source": [
         "import numpy as np\n",
         "array=np.ones(10)*5\n",
-        "print(array)"
+        "print(array)\n"
       ],
       "metadata": {
         "id": "e4005lsTYXxx",
-        "outputId": "94448adf-00ba-4054-afcd-1ef7b46a9db6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5d88c435-102f-4bb6-8e43-4e115f4a5510"
       },
-      "execution_count": 16,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,12 +248,12 @@
       ],
       "metadata": {
         "id": "oAI2tbU2Yag-",
-        "outputId": "16589b59-0aed-4366-ac45-07afef139070",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "87991a96-a93c-48f4-f0c2-dd92a64dc917"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -285,16 +276,16 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
-        "x=np.arange(0,9).reshape(3,3)\n",
+        "import numpy as up\n",
+        "x=np.arange(0,9) .reshape(3,3)\n",
         "print(x)"
       ],
       "metadata": {
         "id": "tOlEVH7BYceE",
-        "outputId": "43f91a77-b9db-4411-bebd-421608eaf2ce",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d1f639f2-b3ea-4c38-939e-09bb4fc18c98"
       },
       "execution_count": 7,
       "outputs": [
@@ -329,12 +320,12 @@
       ],
       "metadata": {
         "id": "rAPSw97aYfE0",
-        "outputId": "c2a39e88-b762-4056-cc3f-47cfad49e176",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b807f70b-798d-47ce-acd5-49cfef7ed41a"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -345,7 +336,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 8
         }
       ]
     },
@@ -371,32 +362,32 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
-        "data=[['orange',5],['Apple',6],['Jackfruit',7]]\n",
+        "data=[['Apple',5],['Grapes',6],['Mango',7]]\n",
         "df=pd.DataFrame(data,columns=['fruits','price'])\n",
         "df\n"
       ],
       "metadata": {
         "id": "T5OxJRZ8uvR7",
-        "outputId": "c3a35786-ab97-4db6-9585-8f2ffeac2582",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
-        }
+        },
+        "outputId": "71b6d8a2-031b-49eb-c5a1-96c32b5f3e1b"
       },
-      "execution_count": 10,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "      fruits  price\n",
-              "0     orange      5\n",
-              "1      Apple      6\n",
-              "2  Jackfruit      7"
+              "   fruits  price\n",
+              "0   Apple      5\n",
+              "1  Grapes      6\n",
+              "2   Mango      7"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-accc5f29-3246-45c3-942b-c19f5073d150\">\n",
+              "  <div id=\"df-3652ba91-fd8b-4a4c-aeb6-60a2b62f9db6\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -423,23 +414,23 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>orange</td>\n",
+              "      <td>Apple</td>\n",
               "      <td>5</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>Apple</td>\n",
+              "      <td>Grapes</td>\n",
               "      <td>6</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>Jackfruit</td>\n",
+              "      <td>Mango</td>\n",
               "      <td>7</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-accc5f29-3246-45c3-942b-c19f5073d150')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3652ba91-fd8b-4a4c-aeb6-60a2b62f9db6')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -490,12 +481,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-accc5f29-3246-45c3-942b-c19f5073d150 button.colab-df-convert');\n",
+              "          document.querySelector('#df-3652ba91-fd8b-4a4c-aeb6-60a2b62f9db6 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-accc5f29-3246-45c3-942b-c19f5073d150');\n",
+              "          const element = document.querySelector('#df-3652ba91-fd8b-4a4c-aeb6-60a2b62f9db6');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -518,7 +509,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 14
         }
       ]
     },
@@ -528,7 +519,7 @@
       "metadata": {
         "id": "xNpI_XXoYhs0"
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -550,12 +541,12 @@
       ],
       "metadata": {
         "id": "dgyC0JhVYl4F",
-        "outputId": "b6cd6099-4d0c-4a01-c595-2c183ccdd750",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a437d9da-0993-4ab2-e116-1ac0fd13ef2a"
       },
-      "execution_count": 12,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -869,31 +860,31 @@
       "source": [
         "import pandas as pd\n",
         "lists=[[1,'aaa',22],[2,'bbb',25],[3,'ccc',24]]\n",
-        "df=pd.DataFrame(lists,columns=['Sino','Name','Age'])\n",
+        "df=pd.DataFrame(lists,columns=['sino','Name','Age'])\n",
         "df"
       ],
       "metadata": {
         "id": "knH76sDKYsVX",
-        "outputId": "61a4cf49-f696-4bd1-81dc-84397196beed",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
-        }
+        },
+        "outputId": "5297bd79-5602-4924-885d-f27be1ace5b4"
       },
-      "execution_count": 14,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "   Sino Name  Age\n",
+              "   sino Name  Age\n",
               "0     1  aaa   22\n",
               "1     2  bbb   25\n",
               "2     3  ccc   24"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a9a963a6-2bfb-4e2c-87fc-7f992daa0bfd\">\n",
+              "  <div id=\"df-08146796-dd63-4f18-bd00-7420fd769f46\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -913,7 +904,7 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
-              "      <th>Sino</th>\n",
+              "      <th>sino</th>\n",
               "      <th>Name</th>\n",
               "      <th>Age</th>\n",
               "    </tr>\n",
@@ -940,7 +931,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a9a963a6-2bfb-4e2c-87fc-7f992daa0bfd')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-08146796-dd63-4f18-bd00-7420fd769f46')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -991,12 +982,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-a9a963a6-2bfb-4e2c-87fc-7f992daa0bfd button.colab-df-convert');\n",
+              "          document.querySelector('#df-08146796-dd63-4f18-bd00-7420fd769f46 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-a9a963a6-2bfb-4e2c-87fc-7f992daa0bfd');\n",
+              "          const element = document.querySelector('#df-08146796-dd63-4f18-bd00-7420fd769f46');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1019,7 +1010,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 19
         }
       ]
     }
